[tool.poetry]
name = "contentful-webhook-receiver"
version = "0.4.0"
description = "A Django package to receive Webhooks from Contentful as signals"
authors = ["MarcoGlauser <github@mglauser.ch>"]
license = "MIT"
readme = 'README.rst'
repository = 'https://github.com/MarcoGlauser/contentful-webhook-receiver'

[tool.poetry.dependencies]
python = ">=3.7,<3.13"
Django = ">=3.1,<5.1"
djangorestframework = "^3.0.0"

[tool.poetry.dev-dependencies]
django-model-utils = "^4"

[tool.poetry.group.test.dependencies]
coverage = ">=4.4.1"
flake8 = ">=2.1"
tox = "^4"
codecov = "^2"
django-model-utils = "^4"

[tool.poetry_bumpversion.file."contentful_webhook_receiver/__init__.py"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
